@@ -90,6 +90,7 @@ APU_DECLARE(apr_bucket *) apr_bucket_flush_create(void)
 APU_DECLARE_DATA const apr_bucket_type_t apr_bucket_type_flush = {
     "FLUSH", 5,
     apr_bucket_destroy_noop,
+    free,
     flush_read,
     apr_bucket_setaside_noop,
     apr_bucket_split_notimpl,
