@@ -126,6 +126,7 @@ APU_DECLARE(apr_bucket *) apr_bucket_heap_create(
 APU_DECLARE_DATA const apr_bucket_type_t apr_bucket_type_heap = {
     "HEAP", 5,
     heap_destroy,
+    free,
     heap_read,
     apr_bucket_setaside_noop,
     apr_bucket_shared_split,
