@@ -144,6 +144,7 @@ static apr_status_t mmap_setaside(apr_bucket *data, apr_pool_t *p)
 APU_DECLARE_DATA const apr_bucket_type_t apr_bucket_type_mmap = {
     "MMAP", 5,
     mmap_destroy,
+    free,
     mmap_read,
     mmap_setaside,
     apr_bucket_shared_split,
