@@ -153,6 +153,7 @@ APU_DECLARE(apr_bucket *) apr_bucket_pipe_create(apr_file_t *p)
 APU_DECLARE_DATA const apr_bucket_type_t apr_bucket_type_pipe = {
     "PIPE", 5,
     apr_bucket_destroy_noop,
+    free,
     pipe_read,
     apr_bucket_setaside_notimpl,
     apr_bucket_split_notimpl,
